Верстаем адаптивные сетки

--- a/less/blocks/main-header.less
+++ b/less/blocks/main-header.less
@@ -1,3 +1,11 @@
 .main-header {
+  background-color: @darkblue;
+  background-image: url(../img/bg-back-mobile@1x.jpg);
+  background-position: center 254px;
+}
 
+@media @desktop-widths {
+  .main-header {
+    // background-position: 54px 54px;
+  }
 }
