--- a/less/blocks/comment.less
+++ b/less/blocks/comment.less
@@ -1,36 +1,215 @@
 .comment {
-    background-color: @gray;
+  background-color: @gray;
+  padding: 17px;
+  padding-bottom: 11px;
 }
 
 .comment__title {
+  margin: 0;
 }
 
 .comment__name {
-    font-size: 14px;
-    line-height: 24px;
-    font-weight: 700;
-    color: @darkblue;
+  font-size: 14px;
+  line-height: 24px;
+  font-weight: 700;
+  color: @darkblue;
 }
 
 .comment__time {
-    font-size: 12px;
-    line-height: 24px;
-    font-weight: 300;
-    color: @darkblue;
-    text-transform: uppercase;
+  font-size: 12px;
+  line-height: 24px;
+  font-weight: 300;
+  color: @darkblue;
+  text-transform: uppercase;
 }
 
 .comment__text {
-    font-size: 14px;
-    line-height: 24px;
-    font-weight: 400;
-    color: @darkblue;
+  font-size: 14px;
+  line-height: 24px;
+  font-weight: 400;
+  color: @darkblue;
+  margin: 0px;
 }
 
 .comment__likes {
-    font-size: 12px;
-    line-height: 24px;
-    font-weight: 400;
-    color: @pink;
-    text-transform: uppercase;
+  position: relative;
+  font-size: 12px;
+  line-height: 24px;
+  font-weight: 400;
+  color: @pink;
+  text-transform: uppercase;
+  padding-left: 32px;
+  padding-top: 10px;
+}
+
+.comment__likes::before {
+  position: absolute;
+  content: "";
+  background: url(../img/icon-heart.svg) no-repeat;
+  width: 13px;
+  height: 12px;
+  top: 16px;
+  left: 1px;
+}
+
+.comment--of-the-day {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.comment--of-the-day .comment__title {
+  padding-bottom: 0px;
+  padding-top: 0px;
+}
+
+@media @tablet-widths {
+  .comment {
+    padding-left: 27px;
+    padding-right: 27px;
+    padding-top: 24px;
+    padding-bottom: 22px;
+  }
+
+  .comment__text {
+    width: 260px;
+  }
+
+  .comment__likes {
+    padding: 0px;
+    margin: 0px;
+    padding-top: 37px;
+  }
+
+  .comment__likes--up {
+    padding-top: 13px;
+  }
+
+  .comment__likes::before {
+    top: 42px;
+    left: 229px;
+  }
+
+  .comment__likes--up::before {
+    top: 18px;
+  }
+
+  .comment--of-the-day {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 auto;
+    padding-top: 25px;
+    padding-left: 27px;
+    padding-right: 27px;
+    padding-bottom: 24px;
+    margin-left: 40px;
+    margin-right: 40px;
+  }
+
+  .comment--of-the-day .comment__name{
+    padding: 0;
+    order: 0;
+  }
+
+  .comment--of-the-day .comment__time{
+    order: 1;
+  }
+
+  .comment--of-the-day .comment__text{
+    order: 3;
+    width: auto;
+  }
+
+  .comment--of-the-day .comment__likes{
+    order: 2;
+    padding-left: 305px;
+    padding-top: 1px;
+  }
+
+  .comment--of-the-day .comment__likes::before {
+    top: 6px;
+    left: 413px;
+  }
+}
+
+@media @desktop-widths {
+  .comment {
+    // margin-top: -13px;
+  }
+
+  .comment__title {
+    // padding-left: 11px;
+    // padding-top: 23px;
+  }
+
+  .comment__text {
+    width: 260px;
+    // padding-left: 28px;
+  }
+
+  .comment__likes {
+    // padding-left: 27px;
+    padding-top: 36px;
+  }
+
+  .comment__likes--up {
+    padding-top: 12px;
+  }
+
+  .comment__likes::before {
+    top: 41px;
+    left: 229px;
+  }
+
+  .comment__likes--up::before {
+    top: 17px;
+  }
+
+  .comment--of-the-day {
+    display: flex;
+    flex-wrap: wrap;
+    width: 940px;
+    margin: 0 auto;
+    padding-bottom: 72px;
+    // margin-bottom: 50px;
+    margin-left: 130px;
+    margin-right: 0;
+    height: 71px;
+  }
+
+  .comment--of-the-day .comment__title {
+    margin: 0;
+    // margin-top: 3px;
+    padding-left: 0px;
+    padding-top: 0px;
+
+  }
+
+  .comment--of-the-day .comment__name{
+    padding: 0;
+    order: 0;
+    // padding-left: 27px;
+  }
+
+  .comment--of-the-day .comment__time{
+    order: 1;
+  }
+
+  .comment--of-the-day .comment__text{
+    order: 3;
+    // padding-left: 28px;
+    // padding-top: 10px;
+    width: auto;
+  }
+
+  .comment--of-the-day .comment__likes{
+    order: 2;
+    padding-left: 623px;
+    // padding-top: 4px;
+    margin-bottom: 0;
+  }
+
+  .comment--of-the-day .comment__likes::before {
+    top: 6px;
+    left: 731px;
+  }
 }
