--- a/less/blocks/copyright.less
+++ b/less/blocks/copyright.less
@@ -1,10 +1,52 @@
 .copyright {
-
+  width: 151px;
+  display: block;
+  margin-top: 32px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .copyright__text {
-    font-size: 14px;
-    line-height: 18px;
-    font-weight: 400;
-    color: @darkblue;
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 400;
+  color: @darkblue;
+  text-decoration: none;
+  padding-left: 10px;
+}
+
+.copyright__text img {
+  vertical-align: middle;
+  padding-left: 11px;
+  padding-top: 2px;
+}
+
+@media @tablet-widths {
+  .copyright {
+    margin: 0px;
+    margin-top: 13px;
+  }
+
+  .copyright__text {
+    padding-left: 21px;
+  }
+}
+
+@media @desktop-widths {
+  .copyright {
+    width: 170px;
+    margin: 0px;
+    margin-top: 71px;
+  }
+
+  .copyright__text {
+    font-size: 18px;
+    padding-left: 16px;
+    padding-top: 2px;
+  }
+
+  .copyright__text img {
+    vertical-align: middle;
+    padding-left: 9px;
+  }
 }
