--- a/less/blocks/footer-logo.less
+++ b/less/blocks/footer-logo.less
@@ -1,3 +1,10 @@
 .footer-logo {
+  text-align: center;
+}
 
+@media @desktop-widths {
+  .footer-logo {
+    padding-top: 58px;
+    padding-left: 1px;
+  }
 }
