--- a/less/blocks/offer.less
+++ b/less/blocks/offer.less
@@ -1,11 +1,58 @@
 .offer {
-
+  background-color: @white;
+  padding-top: 21px;
+  padding-bottom: 32px;
 }
 
 .offer__text {
-    background-color: @white;
-    font-size: 14px;
-    line-height: 30px;
-    font-weight: 400;
-    color: @darkblue;
+  margin-left: 17px;
+  margin-right: 20px;
+  font-size: 14px;
+  line-height: 30px;
+  font-weight: 400;
+  color: @darkblue;
+  text-align: center;
+}
+
+.offer__text--one {
+  padding-top: 25px;
+  width: 283px;
+}
+
+@media @tablet-widths {
+  .offer__text {
+    font-size: 18px;
+    margin-left: 21px;
+    margin-top: 22px;
+    margin-bottom: 28px;
+  }
+
+  .offer__text--one {
+    width: 518px;
+    font-size: 18px;
+    padding-top: 78px;
+    padding-bottom: 28px;
+    margin-top: 14px;
+  }
+}
+
+@media @desktop-widths {
+  .offer {
+    padding-top: 5px;
+    padding-bottom: 58px;
+  }
+
+  .offer__text {
+    margin-left: 22px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
+
+  .offer__text--one {
+    width: 840px;
+    font-size: 18px;
+    padding-top: 78px;
+    padding-bottom: 40px;
+    margin-top: 14px;
+  }
 }
