--- a/less/blocks/page-title.less
+++ b/less/blocks/page-title.less
@@ -1,9 +1,39 @@
 .page-title {
-    background-color: @darkblue
+  min-height: 172px;
 }
 
 .page-title__text {
-    font-size: 24px;
+  width: 316px;
+  padding-top: 11px;
+  text-align: center;
+  font-size: 24px;
+  line-height: 29px;
+  font-weight: 300;
+  color: @white;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media @tablet-widths {
+  .page-title__text {
+    width: 357px;
+    font-size: 50px;
+    line-height: 60px;
     font-weight: 300;
-    color: @white;
+    margin: 0 auto;
+    margin-bottom: 141px;
+    padding-top: 67px;
+  }
+}
+
+@media @desktop-widths {
+  .page-title__text {
+    width: 357px;
+    font-size: 50px;
+    line-height: 60px;
+    font-weight: 300;
+    margin: 0 auto;
+    margin-bottom: 100px;
+    padding-top: 63px;
+  }
 }
