--- a/less/blocks/photo-tools.less
+++ b/less/blocks/photo-tools.less
@@ -1,27 +1,249 @@
 .photo-tools {
-
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  position: relative;
+  width: 245px;
+  margin: 0 auto;
+  text-align: center;
+  padding-top: 42px;
 }
 
 .photo-tools__resize {
-
-}
-
-.photo-tools__resize--active {
-
+  display: inline-block;
+  width: 44px;
+  height: 44px;
+  background-image: url(../img/icon-editor-crop.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  margin-left: 11px;
 }
 
 .photo-tools__filling {
-
+  display: inline-block;
+  width: 44px;
+  height: 44px;
+  background-image: url(../img/icon-editor-fill.svg);
+  background-repeat: no-repeat;
+  margin-top: 0px;
+  margin-left: 23px;
+  margin-right: 4px;
 }
 
 .photo-tools__contrast {
-
-}
-
-.photo-tools__resize {
-
+  display: inline-block;
+  width: 44px;
+  height: 44px;
+  background-image: url(../img/icon-editor-contrast.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  margin-left: 22px;
+  margin-right: 17px;
 }
 
 .photo-tools__range {
+  width: 240px;
+  height: 2px;
+  background-color: @black;
+  margin-top: 34px;
+  margin-right: 8px;
+  margin-bottom: 73px;
+}
 
+.photo-tools__range-big {
+  display: none;
+}
+
+.photo-tools__range::before {
+  position: absolute;
+  content: "";
+  width: 14px;
+  height: 14px;
+  background-color: @gray;
+  border: 2px solid @pink;
+  border-radius: 50%;
+  top: 118px;
+  left: 193px;
+}
+
+@media @tablet-widths {
+  .photo-tools {
+    position: relative;
+    width: 320px;
+    padding-top: 0px;
+  }
+
+  .photo-tools__resize {
+    display: inline;
+    width: 22px;
+    height: 22px;
+    margin-left: 39px;
+    margin-top: 9px;
+  }
+
+  .photo-tools__resize::before {
+    position: absolute;
+    content: "";
+    width: 14px;
+    height: 14px;
+    background-color: @gray;
+    border: 2px solid @pink;
+    border-radius: 50%;
+    top: 12px;
+    left: 245px;
+  }
+
+  .photo-tools__filling {
+    display: inline;
+    width: 22px;
+    height: 22px;
+    margin-left: 39px;
+    margin-top: 9px;
+    margin-right: 0px;
+  }
+
+  .photo-tools__filling::before {
+    position: absolute;
+    content: "";
+    width: 14px;
+    height: 14px;
+    background-color: @gray;
+    border: 2px solid @pink;
+    border-radius: 50%;
+    top: 14px;
+    left: 125px;
+  }
+
+  .photo-tools__contrast {
+    display: inline;
+    width: 22px;
+    height: 22px;
+    margin-left: 39px;
+    margin-top: 9px;
+    margin-right: 0px;
+  }
+
+  .photo-tools__contrast::before {
+    position: absolute;
+    content: "";
+    width: 14px;
+    height: 14px;
+    background-color: @gray;
+    border: 2px solid @pink;
+    border-radius: 50%;
+    top: 13px;
+    left: 196px;
+  }
+
+  .photo-tools__range-big {
+    display: inline;
+    width: 202px;
+    height: 2px;
+    background-color: @black;
+    margin-top: 19px;
+    margin-left: 31px;
+  }
+
+  .photo-tools__range-big::after {
+    position: absolute;
+    content: "";
+    width: 275px;
+    height: 1px;
+    background-color: @darkgray;
+    top: 55px;
+    left: 44px;
+  }
+
+  .photo-tools__range {
+    display: none;
+  }
+}
+
+@media @desktop-widths {
+  .photo-tools {
+    position: relative;
+    width: 500px;
+    padding-top: 0px;
+  }
+
+  .photo-tools__resize {
+    display: inline;
+    width: 44px;
+    height: 44px;
+    margin-left: 38px;
+    margin-top: -3px;
+  }
+
+  .photo-tools__resize::before {
+    position: absolute;
+    content: "";
+    width: 14px;
+    height: 14px;
+    background-color: @gray;
+    border: 2px solid @pink;
+    border-radius: 50%;
+    top: 12px;
+    left: 253px;
+  }
+
+  .photo-tools__filling {
+    display: inline;
+    width: 44px;
+    height: 44px;
+    margin-left: 39px;
+    margin-top: -1px;
+    margin-right: 0px;
+  }
+
+  .photo-tools__filling::before {
+    position: absolute;
+    content: "";
+    width: 14px;
+    height: 14px;
+    background-color: @gray;
+    border: 2px solid @pink;
+    border-radius: 50%;
+    top: 12px;
+    left: 429px;
+  }
+
+  .photo-tools__contrast {
+    display: inline;
+    width: 44px;
+    height: 44px;
+    margin-left: 39px;
+    margin-top: -4px;
+    margin-right: 0px;
+  }
+
+  .photo-tools__contrast::before {
+    position: absolute;
+    content: "";
+    width: 14px;
+    height: 14px;
+    background-color: @gray;
+    border: 2px solid @pink;
+    border-radius: 50%;
+    top: 12px;
+    left: 342px;
+  }
+
+  .photo-tools__range-big {
+    display: inline;
+    width: 288px;
+    height: 2px;
+    background-color: @black;
+    margin-top: 18px;
+    margin-left: 47px;
+  }
+
+  .photo-tools__range-big::after {
+    position: absolute;
+    content: "";
+    width: 410px;
+    height: 1px;
+    background-color: @darkgray;
+    top: 54px;
+    left: 90px;
+  }
 }
