--- a/less/blocks/radius-button.less
+++ b/less/blocks/radius-button.less
@@ -1,17 +1,56 @@
 .radius-button {
-    font-family: @fonts;
-    font-size: 18px;
-    line-height: 18px;
-    font-weight: 700;
-    color: @white;
-
+  display:block;
+  font-family: @fonts;
+  font-size: 18px;
+  line-height: 18px;
+  font-weight: 700;
+  color: @white;
 }
 
 .radius-button--red {
-    color: @pink;
-
+  background-color: transparent;
+  width: 100%;
+  height: 55px;
+  border: 3px solid @pink;
+  border-radius: 50px;
+  color: @pink;
+  margin-bottom: 12px;
 }
 
 .radius-button--gray {
-    color: @gray;
+  background-color: transparent;
+  width: 100%;
+  height: 55px;
+  border: 3px solid @darkgray;
+  border-radius: 50px;
+  color: @darkgray;
+}
+
+@media @tablet-widths {
+  .radius-button--red {
+    width: 260px;
+    padding-left: 10px;
+    margin-top: 0px;
+  }
+
+  .radius-button--gray {
+    width: 260px;
+    margin-left: 10px;
+    margin-top: 22px;
+  }
+}
+
+@media @desktop-widths {
+  .radius-button--red {
+    display: inline;
+    width: 183px;
+  }
+
+  .radius-button--gray {
+    display: inline;
+    width: 183px;
+    margin-left: 10px;
+    margin-top: 0px;
+    padding-left: 10px;
+  }
 }
